--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 <div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 	<div class="container bloc-lg">
 		<div class="row">
-			<h2 class="mg-md text-center tc-white">
+			<h2 class="mg-md text-center tc-white bloc-5__heading">
 				Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 			</h2>
 			<div class="col-sm-12 text-center">
@@ -249,40 +249,40 @@
 				</div>
 				<div class="row">
 					<div class="col-sm-4">
-						Partenaires
+						<h4 class="footer-heading">Partenaires</h4>
 							<ul>
-								<li><a href="voiture.com">voiture.com</a></li>
-								<li><a href="pizza.com">pizza.com</a></li>
-								<li><a href="matoiture.com">matoiture.com</a></li>
-								<li><a href="immobilierseo.com">immobilierseo.com</a></li>
+								<li><a href="voiture.com" class="footer-link">voiture.com</a></li>
+								<li><a href="pizza.com" class="footer-link">pizza.com</a></li>
+								<li><a href="matoiture.com" class="footer-link">matoiture.com</a></li>
+								<li><a href="immobilierseo.com" class="footer-link">immobilierseo.com</a></li>
 							</ul>		
 					</div>
 					<div class="col-sm-4">
-						Annuaires liste 1
+						<h4 class="footer-heading">Annuaires liste 1</h4>
 						<ul>
-							<li><a href="annuaireagence.com">annuaireagence.com</a></li>
-							<li><a href="annuaireseo.com">annuaireseo.com</a></li>
-							<li><a href="annuairemarketing.com">annuairemarketing.com</a></li>
-							<li><a href="123seoture.com">123seo.com</a></li>
-							<li><a href="123site.com">123site.com</a></li>
-							<li><a href="annuairewordpress.com">annuairewordpress.com</a></li>
-							<li><a href="listeagence.com">listeagence.com</a></li>
-							<li><a href="meilleuresagencesparis.com">meilleuresagencesparis.com</a></li>
-							<li><a href="listeseo.com">listeseo.com</a></li>
+							<li><a href="annuaireagence.com" class="footer-link">annuaireagence.com</a></li>
+							<li><a href="annuaireseo.com" class="footer-link">annuaireseo.com</a></li>
+							<li><a href="annuairemarketing.com" class="footer-link">annuairemarketing.com</a></li>
+							<li><a href="123seoture.com" class="footer-link">123seo.com</a></li>
+							<li><a href="123site.com" class="footer-link">123site.com</a></li>
+							<li><a href="annuairewordpress.com" class="footer-link">annuairewordpress.com</a></li>
+							<li><a href="listeagence.com" class="footer-link">listeagence.com</a></li>
+							<li><a href="meilleuresagencesparis.com" class="footer-link">meilleuresagencesparis.com</a></li>
+							<li><a href="listeseo.com" class="footer-link">listeseo.com</a></li>
 						</ul>
 					</div>
 					<div class="col-sm-4">
-						Annuaires liste 2
+						<h4 class="footer-heading">Annuaires liste 2</h4>
 						<ul>
-							<li><a href="betterseo.com">betterseo.com</a></li>
-							<li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
-							<li><a href="seojuicelien.com">seojuicelien.com</a></li>
-							<li><a href="meilleursliens.com">meilleursliens.com</a></li>
-							<li><a href="liensagogo.com">liensagogo.com</a></li>
-							<li><a href="backlink.com">backlink.com</a></li>
-							<li><a href="linkjuiceannuaire.com">linkjuiceannuaire.com</a></li>
-							<li><a href="remontersurgoogle.com">remontersurgoogle.com</a></li>
-							<li><a href="vraiseofiable.com">vraiseofiable.com</a></li>
+							<li><a href="betterseo.com" class="footer-link">betterseo.com</a></li>
+							<li><a href="ameliorerseo.com" class="footer-link">ameliorerseo.com</a></li>
+							<li><a href="seojuicelien.com" class="footer-link">seojuicelien.com</a></li>
+							<li><a href="meilleursliens.com" class="footer-link">meilleursliens.com</a></li>
+							<li><a href="liensagogo.com" class="footer-link">liensagogo.com</a></li>
+							<li><a href="backlink.com" class="footer-link">backlink.com</a></li>
+							<li><a href="linkjuiceannuaire.com" class="footer-link">linkjuiceannuaire.com</a></li>
+							<li><a href="remontersurgoogle.com" class="footer-link">remontersurgoogle.com</a></li>
+							<li><a href="vraiseofiable.com" class="footer-link">vraiseofiable.com</a></li>
 						</ul>
 					</div>
 				</div>
