--- a/page2.html
+++ b/page2.html
@@ -81,28 +81,29 @@
 		<div class="row">
 			<div class="col-sm-6">
 				<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+					<h2 class="sr-only">Formulaire de contact</h2>
 					<div class="form-group">
-						<label>
+						<label class="form-label" for="name">
 							Nom
 						</label>
-						<input id="name" class="form-control" required />
+						<input id="name" name="name" class="form-control" required />
 					</div>
 					<div class="form-group">
-						<label>
+						<label class="form-label" for="email">
 							Adresse email
 						</label>
-						<input id="email" class="form-control" type="email" required />
+						<input id="email" class="form-control" type="email" name="email" required />
 					</div>
 					<div class="form-group">
-						<label>
+						<label class="form-label" for="input_504">
 							Comment nous avez-vous connu ?
 						</label>
-						<input class="form-control" type="email" required id="input_504" />
+						<input class="form-control" type="text" required name="input_504" id="input_504" />
 					</div>
 					<div class="form-group">
-						<label>
+						<label class="form-label" for="message">
 							Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
-						</label><textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
+						</label><textarea id="message" name="message" class="form-control" rows="4" cols="50" required></textarea>
 					</div> 
 					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
 						Envoyer
@@ -110,7 +111,7 @@
 				</form>
 			</div>
 			<div class="col-sm-6">
-				<p>
+				<p class="form-txt">
 					contact@lachouetteagence.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
 				</p>
 			</div>
