--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="">
+    <meta name="description" content="Notre agence de web design est spécialisée dans la création et l’optimisation de sites internet. Nous aidons les entreprises à obtenir de la visibilité et de l’attractivité sur le web.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
@@ -93,7 +94,7 @@
 								Web design
 							</h3>
 							<p class="text-center ">
-								Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
+								Que vous ayez un <strong>site web</strong> qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un <strong>design</strong> dont vous serez fier.
 							</p>
 						</div>
 						<div class="col-sm-4">
@@ -104,7 +105,7 @@
 								&nbsp;Stratégie
 							</h3>
 							<p class="text-center ">
-								Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
+								Plutôt que de suggérer des <strong>designs</strong> à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur <strong>design</strong> possible.<br>
 							</p>
 						</div>
 						<div class="col-sm-4">
@@ -115,13 +116,13 @@
 								Illustrations
 							</h3>
 							<p class="text-center ">
-								Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes talentueux pour donner à vos pages une touche finale d'élégance.
+								Un bon <strong>design</strong> n'est rien sans de bonnes illustrations. Laissez faire notre équipe de <strong>graphistes</strong> talentueux pour donner à vos pages une touche finale d'élégance.
 							</p>
 						</div>
 					</div>
 					<div class="row voffset-lg voffset">
 						<blockquote class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-							<p class="blockquote__quote">“La chouette agence est une excellente agence web ! Les<br> web designers ont réussi à capturer l'essence de notre<br> entreprise et à l'intégrer à notre site. Cela nous a aidé à<br> doubler nos ventes en ligne à Lyon.“</p>
+							<p class="blockquote__quote">“La chouette agence est une excellente <strong>agence web</strong> ! Les<br> <strong>web designers</strong> ont réussi à capturer l'essence de notre<br> entreprise et à l'intégrer à notre <strong>site</strong>. Cela nous a aidé à<br> doubler nos ventes en ligne à <strong>Lyon</strong>.“</p>
 
 							<p class="blockquote__author">Maxime Guibard, PDG de À vos fourchettes</p>
 
@@ -139,7 +140,7 @@
 							<h2 class="mg-md text-center tc-white bloc-3__heading">
 								Nous souhaitons aider les entreprises de la région<br> Lyonnaise à se développer et à connaître le<br> succès. Nous travaillons pour aider les<br> entreprises locales à attirer de nouveaux clients.<br>
 							</h2>
-							<p class="text-center white">Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="page2.html">Contactez notre équipe</a>
+							<p class="text-center white">Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de <strong>créer un site</strong> de A à Z ou de donner un coup de jeune à leur <strong>site</strong>. Que vous ayez besoin d’une <strong>identité visuelle</strong> complète ou d’une refonte de votre <strong>site</strong>, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les <strong>moteurs de recherche</strong>. <br><br><a class="ltc-white bold-link" href="page2.html">Contactez notre équipe</a>
 							</p>
 						</div>
 					</div>
@@ -162,7 +163,7 @@
 								Refonte d'un site web pour un journal local
 							</h3>
 							<p class="text-center">
-								Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.
+								Nous avons créé une nouvelle <strong>identité visuelle</strong> pour un journal lyonnais.
 							</p>
 						</div>
 						<div class="col-sm-6">
@@ -182,7 +183,7 @@
 								Création d'un site internet pour un voyageur
 							</h3>
 							<p class="text-center">
-								Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les articles de ce voyageur.
+								Nous avons élaboré un <strong>site internet</strong> et des <strong>illustrations</strong> pour sublimer les vidéos et les articles de ce voyageur.
 							</p>
 						</div>
 						<div class="col-sm-6">
@@ -191,7 +192,7 @@
 								Conception d'un site pour une agence de mariage
 							</h3>
 							<p class="text-center">
-								Nous avons travaillé avec cette agence pour créer un site internet permettant la présentation détaillée de leurs prestations.
+								Nous avons travaillé avec cette agence pour créer un <strong>site internet</strong> permettant la présentation détaillée de leurs prestations.
 							</p>
 						</div>
 					</div>
