--- a/page2.html
+++ b/page2.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="Notre agence de web design est spécialisée dans la création et l’optimisation de sites internet. Nous aidons les entreprises à obtenir de la visibilité et de l’attractivité sur le web.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
@@ -65,7 +66,7 @@
 								Parlons web design !
 							</h1>
 							<p class="text-center mg-lg tc-white tight-width-whitespace">
-								Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
+								Nous sommes ravis que vous souhaitiez collaborer avec notre <strong>agence</strong>.<br>
 								Parlez-nous de votre projet en complétant le formulaire ci-dessous.
 							</p>
 						</div>
