--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 							<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 						</button>
 					</div>
-					<div id="toggle-navbar" class="collapse navbar-collapse navbar-1 special-dropdown-nav" aria-label="breadcrumb">
+					<div id="toggle-navbar" class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 						<ul class="site-navigation nav navbar-nav">
 							<li aria-current="page">
 								<a href="index.html">Accueil</a>
