--- a/page2.html
+++ b/page2.html
@@ -40,7 +40,7 @@
 							<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 						</button>
 					</div>
-					<div  id="toggle-navbar" class="collapse navbar-collapse navbar-1 special-dropdown-nav" aria-label="breadcrumb">
+					<div  id="toggle-navbar" class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 						<ul class="site-navigation nav navbar-nav">
 							<li>
 								<a href="index.html">Accueil</a>
@@ -80,9 +80,9 @@
 				<div class="container bloc-lg">
 					<div class="row">
 						<div class="col-sm-6">
-							<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
-								<title class="sr-only">Formulaire de contact</title>
-								<div class="form-group" role="group" aria-labelledby="name-label">
+							<form id="form_1" novalidate>
+								<h2 class="sr-only">Formulaire de contact</h2>
+								<div class="form-group" role="group" aria-labelledby="label-name">
 									<label class="form-label" for="name" id="label-name">
 										Nom
 									</label>
