--- a/page2.html
+++ b/page2.html
@@ -81,7 +81,7 @@
 				<div class="container bloc-lg">
 					<div class="row">
 						<div class="col-sm-6">
-							<form id="form_1" novalidate>
+							<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
 								<h2 class="sr-only">Formulaire de contact</h2>
 								<div class="form-group" role="group" aria-labelledby="label-name">
 									<label class="form-label" for="name" id="label-name">
