--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!doctype html>
+
 <html lang="fr">
+
 <head>
     <meta charset="utf-8">
+
     <meta name="description" content="Notre agence de web design est spécialisée dans la création et l’optimisation de sites internet. Nous aidons les entreprises à obtenir de la visibilité et de l’attractivité sur le web.">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+
     <meta name="robots" content="index, follow">
+
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
@@ -27,6 +33,7 @@
 <!-- Analytics END -->
     
 </head>
+
 <body>
 <!-- Principal conteneur -->
 	<div class="page-container">
@@ -48,7 +55,7 @@
 								<a href="index.html">Accueil</a>
 							</li>
 							<li>
-								<a href="page2.html">Contact &gt;</a>
+								<a href="contact.html">Contact &gt;</a>
 							</li>
 						</ul>
 					</div>
@@ -246,45 +253,6 @@
 								</div>
 							</div>
 						</div>
-						<nav class="row" aria-label="footer navigation">
-							<div class="col-sm-4">
-								<h4 class="footer-heading">Partenaires</h4>
-								<ul>
-									<li><a href="voiture.com" class="footer-link">voiture.com</a></li>
-									<li><a href="pizza.com" class="footer-link">pizza.com</a></li>
-									<li><a href="matoiture.com" class="footer-link">matoiture.com</a></li>
-									<li><a href="immobilierseo.com" class="footer-link">immobilierseo.com</a></li>
-								</ul>		
-							</div>
-							<div class="col-sm-4">
-								<h4 class="footer-heading">Annuaires liste 1</h4>
-								<ul>
-									<li><a href="annuaireagence.com" class="footer-link">annuaireagence.com</a></li>
-									<li><a href="annuaireseo.com" class="footer-link">annuaireseo.com</a></li>
-									<li><a href="annuairemarketing.com" class="footer-link">annuairemarketing.com</a></li>
-									<li><a href="123seoture.com" class="footer-link">123seo.com</a></li>
-									<li><a href="123site.com" class="footer-link">123site.com</a></li>
-									<li><a href="annuairewordpress.com" class="footer-link">annuairewordpress.com</a></li>
-									<li><a href="listeagence.com" class="footer-link">listeagence.com</a></li>
-									<li><a href="meilleuresagencesparis.com" class="footer-link">meilleuresagencesparis.com</a></li>
-									<li><a href="listeseo.com" class="footer-link">listeseo.com</a></li>
-								</ul>
-							</div>
-							<div class="col-sm-4">
-								<h4 class="footer-heading">Annuaires liste 2</h4>
-								<ul>
-									<li><a href="betterseo.com" class="footer-link">betterseo.com</a></li>
-									<li><a href="ameliorerseo.com" class="footer-link">ameliorerseo.com</a></li>
-									<li><a href="seojuicelien.com" class="footer-link">seojuicelien.com</a></li>
-									<li><a href="meilleursliens.com" class="footer-link">meilleursliens.com</a></li>
-									<li><a href="liensagogo.com" class="footer-link">liensagogo.com</a></li>
-									<li><a href="backlink.com" class="footer-link">backlink.com</a></li>
-									<li><a href="linkjuiceannuaire.com" class="footer-link">linkjuiceannuaire.com</a></li>
-									<li><a href="remontersurgoogle.com" class="footer-link">remontersurgoogle.com</a></li>
-									<li><a href="vraiseofiable.com" class="footer-link">vraiseofiable.com</a></li>
-								</ul>
-							</div>
-						</nav>
 					</div>
 				</div>
 			</div>
